Updated notifications and added save order details to PDF

--- a/AppProduct.Blazor/wwwroot/index.html
+++ b/AppProduct.Blazor/wwwroot/index.html
@@ -63,6 +63,7 @@
     </div>
 
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+    <script src="_content/AppProduct.Shared.Blazor/js/utils.js"></script>
    <script>navigator.serviceWorker.register('service-worker.js');</script> 
                <script src="_framework/blazor.webassembly.js"></script>
 </body>
